--- a/BeerAppDemo/BeerAppDemo/Views/Shared/_Layout.cshtml
+++ b/BeerAppDemo/BeerAppDemo/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-
+    
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -40,5 +40,11 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+    <script src="~/Scripts/Global/Boot.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            objectFactory.LoadAllDependencies('Beer');
+        });
+    </script>
 </body>
 </html>
