Refactoring code to layers

--- a/BeerAppDemo/BeerAppDemo/Views/Beer/Index.cshtml
+++ b/BeerAppDemo/BeerAppDemo/Views/Beer/Index.cshtml
@@ -49,6 +49,4 @@ else
 <div class="container">
     @Html.ActionLink("Add New", "EditBeer")
 </div>
-<script src="~/Scripts/Beer/BeerView.js"></script>
-<script src="~/Scripts/Beer/BeerController.js"></script>
-<script src="~/Scripts/Beer/BeerModel.js"></script>
+@Scripts.Render("~/bundles/beermodule")
