--- a/BeerAppDemo/BeerAppDemo/Views/Shared/_Layout.cshtml
+++ b/BeerAppDemo/BeerAppDemo/Views/Shared/_Layout.cshtml
@@ -40,7 +40,8 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
-    <script src="~/Scripts/Global/Boot.js"></script>
+    @*<script src="~/Scripts/Global/Boot.js"></script>*@
+    @Scripts.Render("~/bundles/global")
     <script type="text/javascript">
         $(document).ready(function () {
             objectFactory.LoadAllDependencies('Beer');
